--- a/example.css
+++ b/example.css
@@ -3,18 +3,49 @@
 }
 
 .subheader {
-    color: blue;
-    font-style: italic;
+    color: rgb(245, 248, 244);
+    font-style: comic;
 }
 
 .navbar {
-    background: black;
+    font-family: "Open Sans", sans-serif;
+    background: rgb(19, 22, 22);
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 5px;
 }
 
 .nav-option {
-    color: rgb(50, 238, 50);
-    margin-right: 5px;
+    color: rgb(243, 243, 247);
+    margin-right: 10px;
 }
+
+h1 {
+    font-family: 'Raleway', sans-serif;
+    font-size: 60px; /* Adjust the size as needed */
+    font-weight: bold; /* Makes the font thicker */
+
+}
+body {
+    background-color: #39c8d5; 
+    background-image: url('https://static.vecteezy.com/system/resources/previews/006/413/058/non_2x/soft-beautiful-abstract-background-you-can-use-this-background-for-your-content-like-as-technology-video-gaming-promotion-card-banner-sports-education-presentation-website-anymore-vector.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+h2{
+    font-family: 'Raleway', sans-serif;
+    font-size: 40px; /* Adjust the size as needed */
+    font-weight: bold; /* Makes the font thicker */ 
+}
+p1{
+    font-size: 30px;
+}
+p2{
+    font-size: 30px;
+}
+.border {
+    border: solid 5px rgb(0, 0, 0);
+   }
+
+
